--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,5 +1,6 @@
 $main-font: 'Quicksand', sans-serif
 $secondary-font: 'Roboto', sans-serif
-$sm: 1.4rem
-$md: 1.6rem
-$lg: 1.8rem
+$sm: .875rem
+$md: 1rem
+$lg: 1.125rem
+$radius: 8px
