feat: minor changes.

--- a/sass/new-password.sass
+++ b/sass/new-password.sass
@@ -1,6 +1,6 @@
-@use 'global'
-@use 'colors'
-@use 'fonts'
+@use 'modules/global'
+@use 'modules/colors'
+@use 'modules/fonts'
 
 body
 	@include global.global
