feat: using logo & primary-btn modules.

--- a/sass/new-password.sass
+++ b/sass/new-password.sass
@@ -1,6 +1,8 @@
 @use 'modules/global'
 @use 'modules/colors'
 @use 'modules/fonts'
+@use 'modules/logo'
+@use 'modules/_primary-btn'
 
 body
 	@include global.global
@@ -10,13 +12,6 @@ body
 	place-items: center
 	width: 100%
 	height: 100vh
-
-.logo__container
-	display: none
-	align-self: flex-end
-
-	.logo
-		width: 150px
 	
 .form__container
 	display: grid
@@ -54,19 +49,6 @@ body
 		border: none
 		border-radius: fonts.$radius
 		background-color: colors.$text-input-field
-		
-	.primary__btn
-		height: 3.125rem
-		width: 100%
-
-		font-size: fonts.$md
-		font-weight: bold
-		border: none
-		border-radius: fonts.$radius
-
-		color: colors.$white
-		background-color: colors.$main-color
-		cursor: pointer
 		
 	.new-password__btn
 		margin-top: fonts.$sm
