--- a/sass/password-recovery-2.sass
+++ b/sass/password-recovery-2.sass
@@ -1,6 +1,8 @@
 @use 'modules/global'
 @use 'modules/colors'
 @use 'modules/fonts'
+@use 'modules/logo'
+@use 'modules/_primary-btn'
 
 body
 	@include global.global
@@ -10,13 +12,6 @@ body
 	place-items: center
 	width: 100%
 	height: 100vh
-
-.logo__container
-	display: none
-	align-self: flex-end
-
-	.logo
-		width: 150px
 
 .login__container
 	display: grid
@@ -54,20 +49,7 @@ body
 	.icon
 		width: 80px
 
-.primary__btn
-		height: 3.125rem // 50px
-		width: 100%
-
-		font-size: fonts.$md
-		font-weight: bold
-		border: none
-		border-radius: fonts.$radius
-
-		color: colors.$white
-		background-color: colors.$main-color
-		cursor: pointer
-
-.login__btn
+//.login__btn
 
 .resend-email
 	font-size: fonts.$sm // 14px
