--- a/sass/modules/_primary-btn.sass
+++ b/sass/modules/_primary-btn.sass
@@ -1,15 +1,7 @@
-@use 'fonts'
+@use 'button'
 @use 'colors'
 
 .primary__btn
-		height: 3.125rem // 50px
-		width: 100%
-
-		font-size: fonts.$md
-		font-weight: bold
-		border: none
-		border-radius: fonts.$radius
-
-		color: colors.$white
-		background-color: colors.$main-color
-		cursor: pointer
+	@include button.general
+	color: colors.$white
+	background-color: colors.$main-color
