feat: new color variable & hover added to primary and secondary buttons.

--- a/sass/modules/_primary-btn.sass
+++ b/sass/modules/_primary-btn.sass
@@ -5,3 +5,6 @@
 	@include button.general
 	color: colors.$white
 	background-color: colors.$main-color
+
+	&:hover
+		background-color: colors.$darker-main-color
