feat: reseting styles for *ul li* & *a* elements.

--- a/sass/modules/_global.sass
+++ b/sass/modules/_global.sass
@@ -3,3 +3,10 @@
 @mixin global
 	margin: 0
 	font-family: fonts.$main-font
+
+ul li
+	text-decoration: none
+	list-style: none
+
+a
+	text-decoration: none
