--- a/sass/modules/_product.sass
+++ b/sass/modules/_product.sass
@@ -3,13 +3,20 @@
 
 $image-size: 60px
 $separation: 16px
+$mini-separation: 6px
+
+@mixin products
+    grid-column-end: span 2
+    padding: 8px
+    border-radius: 8px
+    background-color: colors.$white
 
 @mixin product
     display: flex
     justify-content: space-between
     align-items: center
     margin-bottom: $separation
-    padding-right: $separation
+    padding: 0
 
     div
         display: flex
@@ -18,8 +25,6 @@ $separation: 16px
         .product--image__container
             width: $image-size
             height: $image-size
-            margin: 0
-            margin-right: $separation
 
             .product--image
                 width: 100%
@@ -34,3 +39,19 @@ $separation: 16px
     &--price
         font-size: fonts.$sm
         font-weight: bold
+
+@mixin product-image__container
+    margin: 0
+    padding: $mini-separation
+
+@mixin product-name
+    margin: 0
+    padding: $mini-separation
+    padding-left: $mini-separation * 2
+
+@mixin product-price
+    margin: 0
+    padding: 0 $mini-separation
+
+@mixin last-child
+    margin-bottom: 0
