--- a/sass/modules/_order.sass
+++ b/sass/modules/_order.sass
@@ -32,6 +32,7 @@ $mini-separation: 6px
 
             .date, .quantity
                 font-size: fonts.$sm
+                margin: 0
 
             .date
                 margin-top: 0
