feat: minor changes on navbar styles.

--- a/sass/navbar.sass
+++ b/sass/navbar.sass
@@ -16,7 +16,10 @@ body
 .menu
     justify-content: space-between
     width: 100%
+    width: 100vw
+    height: 8vh
     padding: $separation 0
+    box-shadow: 1px 1px 10px colors.$black
 
     &-icon__container
         display: none
